add photo upload

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,3 +9,9 @@ db_user = root
 db_pass =
 db_name = suanli
 db_type = mysql
+
+
+
+root = staging
+path = D://suanli
+accessUrl = http://192.168.1.87:80/suanli_yunwei/public/pws/adminjwt/FileUtils/storage
